# oort_hackathon

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/pages/: _app.js  factoryview.js  index.js
frontend/pages/components/: Navbar.js
nftMintFactory/: .secrets.json  package-lock.json  truffle-config.js
nftMintFactory/contracts/: NftFactory.sol
nftMintFactory/migrations/: nft_factory_migration.js
src/: main.rs
temp.db/: 000008.sst  000689.sst  000980.sst  000983.sst  IDENTITY  LOG  LOG.old.1670239717369916  LOG.old.1670239748577645  LOG.old.1670239760196418  LOG.old.1670239796190011  LOG.old.1670239882157300  LOG.old.1670240048909436  LOG.old.1670240109639240  LOG.old.1670240157220313  LOG.old.1670240161732322  LOG.old.1670240167191822  LOG.old.1670240211066334  LOG.old.1670240246851133  LOG.old.1670240293512319  LOG.old.1670240299160232  LOG.old.1670240329726075  LOG.old.1670240344313596  LOG.old.1670240405343777  LOG.old.1670240414763803  LOG.old.1670240442409546  LOG.old.1670240445730534  LOG.old.1670240461689679  LOG.old.1670240466647029  LOG.old.1670240473996343  LOG.old.1670240488427825  LOG.old.1670240491943644  LOG.old.1670240501414026  LOG.old.1670240511466580  LOG.old.1670240518180637  LOG.old.1670240528998282  LOG.old.1670240537699610  LOG.old.1670240543877493  LOG.old.1670240547094571  LOG.old.1670240549892825  LOG.old.1670240554157066  (+210 more)
